# attack-on-domain

./: .gitignore  AGENTS.md  Makefile  README.md  SKILLS.md  diagrama.html  pyproject.toml  skills-lock.json  zensical.toml
.opencode/skills/: attack-on-domain.md
code/aod/: __init__.py  diagram.py  events.py
code/aod/_internal/application/: contracts.py  dto.py  event_bus.py  logger.py  port.py  repository.py  unit_of_work.py  use_case.py
code/aod/_internal/core/: application_exception.py  async_utils.py  base_behaviour.py  base_immutable.py  base_inmutable.py  base_operation.py  base_sealed.py  base_validator.py  domain_exception.py  event_emitter.py  infrastructure_exception.py  model_maker.py  reconstructable.py  serialization.py  type_utils.py
code/aod/_internal/docs/: generate.py  introspect.py  model.py  renderer.py  zensical.py
code/aod/application/: __init__.py  cache.py  exceptions.py
code/aod/docs/: __init__.py  model.py
code/aod/domain/: __init__.py  exceptions.py
code/aod/exceptions/: __init__.py
code/aod/infrastructure/: __init__.py  exceptions.py
code/aod/schema/: __init__.py
code/aod/testing/: __init__.py  helpers.py
code/aod/validation/: __init__.py
code/core/: __main__.py  base_inmutable.py  base_mutable.py  base_validator.py  event_emitter.py  model_maker.py
code/core/fields/: fields.py
code/core/validators/: __init__.py  validators.py
code/deedee/: __init__.py
code/deedee/_internal/: __init__.py
code/domain/: __init__.py  bounded_context.py  entity.py  value_object.py
code/examples/: diagram.py
code/tests/: conftest.py  doubles.py  test_faker.py  test_handler_type_check.py  test_handlers.py  test_make_stub.py  test_public_api.py  test_spy_session.py  test_testing_helpers.py
code/tests/application/: _use_case_scenarios.py  test_async_port.py  test_async_use_case.py  test_contracts.py  test_handler_protocol.py  test_port.py  test_projection.py  test_repository.py  test_use_case.py
code/tests/core/: test_base_guarded.py  test_base_inmutable.py  test_base_mutable.py  test_base_operation_edge.py  test_base_operation_port_check.py  test_base_sealed.py  test_base_validator.py  test_base_validator_edge.py  test_constrained_model.py  test_generic_utils.py  test_mutating_context.py  test_post_init.py  test_serialization.py
code/tests/domain/: test_app.py  test_bounded_context.py  test_describe.py  test_entity.py  test_entity_id.py  test_entity_id_check.py  test_event_emitter.py  test_service.py  test_value_object.py
code/tests/e2e/: test_ecommerce.py  test_invariances.py  test_mutation_rules.py  test_projections.py
code/tests/infrastructure/: test_async_handlers.py  test_async_projection_handler.py  test_async_repository.py  test_cache.py  test_container.py  test_container_edge.py  test_inject.py  test_inject_edge.py  test_multi_session_handler.py  test_projection_classes.py  test_projection_handler.py  test_repository.py  test_session.py  test_spy_container.py  test_spy_container_ext.py  test_unit_of_work.py  test_uow_begin.py
code/tests/integration_tests/: test_integration_render.py
code/tests/schema/: make_example_site.py  test_docs.py  test_integration_render.py  test_render.py  test_schema.py  test_schema_public_api.py
code/tests/test_docs/: script_zensical_build.py  test_generate.py  test_generate_edge.py  test_introspect_edge.py
code/tests/testing/: test_faker.py  test_handler_type_check.py  test_handlers.py  test_make_stub.py  test_public_api.py  test_spy_cache.py  test_spy_session.py  test_stub_methods.py  test_testing_helpers.py
docs/: index.md
docs/api/: index.md
docs/application/: contracts.md  handlers.md  index.md  ports.md  use-cases.md
docs/core/: base_guarded.md  base_immutable.md  base_mutable.md  base_sealed.md  base_validator.md  bounded_context.md  cache.md  event_emitter.md  exceptions.md  invariances.md  make_immutable.md  model_maker.md  session.md  testing.md  type_checking.md
docs/domain/: bounded-context.md  entities.md  entity-id.md  events.md  index.md  services.md  validation.md  value-objects.md
docs/getting-started/: concepts.md  index.md  installation.md  mapping.md  quickstart.md
docs/infrastructure/: container.md  handlers.md  index.md  injection.md  projections.md  sessions.md
docs/overrides/: main.html
docs/schema/: index.md
docs/stylesheets/: extra.css
docs/testing/: index.md
skills/attack-on-domain/: SKILL.md
(+227 files in other folders)
