[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deedee"
version = "0.1.0"
description = "DDD building blocks: entities, value objects, bounded contexts, and validation helpers."
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Private :: Do Not Upload",
]
dependencies = [
    "pydantic>=2.12.4",
    "typing-inspect>=0.9.0",
]

[tool.setuptools.package-dir]
"" = "code"

[tool.setuptools.packages.find]
where = ["code"]
include = ["deedee*"]
exclude = ["tests*", "tests"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.20.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["code"]
testpaths = ["code/tests"]

[tool.mypy]
python_version = "3.14"
mypy_path = ["code"]
files = ["code"]
explicit_package_bases = true
