[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Name on PyPI / `pip install …`. The import package remains `deedee` (folder `code/deedee/`).
name = "deedee-domain"
version = "0.1.0"
description = "DDD building blocks: entities, value objects, bounded contexts, and validation helpers."
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Alfonso Cuesta" },
]
keywords = ["ddd", "domain-driven-design", "entity", "value-object"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.12.4",
    "typing-inspect>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/AlfonsoCuesta/deedee"
Repository = "https://github.com/AlfonsoCuesta/deedee"
Issues = "https://github.com/AlfonsoCuesta/deedee/issues"

[tool.setuptools.package-data]
deedee = ["py.typed"]

[tool.setuptools.package-dir]
"" = "code"

[tool.setuptools.packages.find]
where = ["code"]
include = ["deedee*"]
exclude = ["tests*", "tests"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.20.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["code"]
testpaths = ["code/tests"]

[tool.mypy]
python_version = "3.14"
mypy_path = ["code"]
files = ["code"]
explicit_package_bases = true
