[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attack-on-domain"
version = "0.0.23"
description = "DDD building blocks: entities, value objects, bounded contexts, and validation helpers."
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Alfonso Cuesta" },
]
keywords = ["ddd", "domain-driven-design", "entity", "value-object"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "polyfactory>=3.3.0",
    "pydantic>=2.12.4",
    "typing-inspect>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/AlfonsoCuesta/attack-on-domain"
Repository = "https://github.com/AlfonsoCuesta/attack-on-domain"
Issues = "https://github.com/AlfonsoCuesta/attack-on-domain/issues"

[tool.setuptools.package-data]
aod = ["py.typed"]

[tool.setuptools.package-dir]
"" = "code"

[tool.setuptools.packages.find]
where = ["code"]
include = ["aod*"]
exclude = ["tests*", "tests"]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty",
    "pre-commit>=4.4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.26.0",
    "zensical",
]

[tool.pytest.ini_options]
pythonpath = ["code"]
testpaths = ["code/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
root = ["./code"]
